--- a/api_test.html
+++ b/api_test.html
@@ -8,6 +8,8 @@
     <meta name="author" content="Percy" />
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="./api_test.js"></script>
   </body>
 </html>
