--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.css"
@@ -245,7 +246,7 @@
               </div>
             </li>
             <li class="recommendation-card">
-              <img src="https://i.imgur.com/C0NDvSA.png" alt="" />
+              <img src="./assets/images/C0NDvSA.png" alt="" />
               <div class="recommend-content">
                 <div class="recommend-img">
                   <img src="./assets/images/" alt="" />
@@ -296,13 +297,14 @@
     </section>
     <section class="wrap productDisplay">
       <select name="" class="productSelect">
-        <option value="全部" selected>全部</option>
+        <!-- <option value="全部" selected>全部</option>
         <option value="床架">床架</option>
         <option value="收納">收納</option>
-        <option value="窗簾">窗簾</option>
+        <option value="窗簾">窗簾</option> -->
       </select>
       <ul class="productWrap">
-        <li class="productCard">
+        <h1>Loading....</h1>
+        <!-- <li class="productCard">
           <h4 class="productType">新品</h4>
           <img
             src="https://hexschool-api.s3.us-west-2.amazonaws.com/custom/dp6gW6u5hkUxxCuNi8RjbfgufygamNzdVHWb15lHZTxqZQs0gdDunQBS7F6M3MdegcQmKfLLoxHGgV3kYunUF37DNn6coPH6NqzZwRfhbsmEblpJQLqXLg4yCqUwP3IE.png"
@@ -389,7 +391,7 @@
           <h3>Antony 雙人床架／雙人加大</h3>
           <del class="originPrice">NT$18,000</del>
           <p class="nowPrice">NT$12,000</p>
-        </li>
+        </li> -->
       </ul>
     </section>
     <section class="shoppingCart">
@@ -398,9 +400,9 @@
         <table class="shoppingCart-table">
           <thead>
             <tr>
-              <th width="40%">品項</th>
+              <th width="35%">品項</th>
               <th width="15%">單價</th>
-              <th width="15%">數量</th>
+              <th width="20%">數量</th>
               <th width="15%">金額</th>
               <th width="15%"></th>
             </tr>
@@ -409,12 +411,35 @@
             <tr>
               <td>
                 <div class="cardItem-title">
-                  <img src="https://i.imgur.com/HvT3zlU.png" alt="" />
+                  <img src="./assets/images/HvT3zlU.png" alt="" />
                   <p>Antony 雙人床架／雙人加大</p>
                 </div>
               </td>
               <td>NT$12,000</td>
-              <td>1</td>
+              <td class="">
+                <div class="quality-control">
+                  <!-- <button class="add-btn">
+                    <span class="material-icons"> add </span>
+                  </button>
+                  <span class="a-num">10</span>
+                  <button class="remove-btn">
+                    <span class="material-icons"> remove </span>
+                  </button> -->
+                  <!-- <ul>
+                    <li>
+                   <button class="add-btn">
+                        <span class="material-icons"> add </span>
+                      </button>
+                    </li>
+                    <li> <span class="a-num">10</span></li>
+                    <li>
+                      <button class="remove-btn">
+                        <span class="material-icons"> remove </span>
+                      </button>
+                    </li>
+                  </ul> -->
+                </div>
+              </td>
               <td>NT$12,000</td>
               <td class="discardBtn">
                 <a href="#" class="material-icons"> clear </a>
@@ -424,14 +449,16 @@
           <tfoot>
             <tr>
               <td>
-                <a href="#" class="discardAllBtn">刪除所有品項</a>
+                <button href="#" class="discardAllBtn" disabled>
+                  刪除所有品項
+                </button>
               </td>
               <td></td>
               <td></td>
               <td>
                 <p>總金額</p>
               </td>
-              <td>NT$13,980</td>
+              <td class="finalPrice">NT$13,980</td>
             </tr>
           </tfoot>
         </table>
@@ -474,9 +501,9 @@
               class="orderInfo-input"
               id="customerEmail"
               placeholder="請輸入 Email"
-              name="Email"
+              name="信箱"
             />
-            <p class="orderInfo-message" data-message="Email">必填</p>
+            <p class="orderInfo-message" data-message="信箱">必填</p>
           </div>
         </div>
         <div class="orderInfo-formGroup">
@@ -570,6 +597,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./app.js"></script>
   </body>
